# load-test-practice

./: .gitignore  Makefile  pyproject.toml
src/: main.py
tests/load/: test_locustfile.py
