[project]
name = "src"
version = "0.1.0"
description = ""
authors = [{ name = "dev-glenn-lr", email = "dev_glenn@lrtechs.co.jp" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi (>=0.115.12,<0.116.0)", "uvicorn (>=0.34.2,<0.35.0)"]

[tool.poetry]
packages = [{ include = "src" }]


[tool.poetry.group.dev.dependencies]
locust = "^2.37.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
